--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "license": "ISC",
     "packageManager": "pnpm@10.12.1",
     "dependencies": {
-        "express": "^5.1.0",
-        "pg": "^8.12.0",
-        "dotenv": "^16.4.5",
         "bcryptjs": "^2.4.3",
-        "jsonwebtoken": "^9.0.2",
+        "cors": "^2.8.5",
         "date-fns": "^3.6.0",
-        "cors": "^2.8.5"
+        "dotenv": "^16.4.5",
+        "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "morgan": "^1.10.1",
+        "pg": "^8.12.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.4"
